--- a/taco-cloud/bin/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/bin/src/main/resources/templates/orderForm.html
@@ -16,29 +16,54 @@
 		<h3>Deliver my taco masterpieces to...</h3>
 		
 		<label for="name">Name: </label> 
-		<input type="text" th:field="*{name}" /><br/> 
+		<input type="text" th:field="*{name}" />
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('name')}"
+			  th:errors="*{name}"> Name is required </span> <br/> 
 		
 		<label for="street">Street address:</label> 
-		<input type="text"	th:field="*{street}"/> <br/> 
+		<input type="text"	th:field="*{street}"/> 
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('street')}"
+			  th:errors="*{street}"> Street is required </span> <br/> 
+		
 		
 		<label for="city">City: </label> 
-		<input type="text" th:field="*{city}" /> <br /> 
+		<input type="text" th:field="*{city}" />
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('city')}"
+			  th:errors="*{city}"> City is required </span> <br/> 
 		
 		<label for="state">State: </label> 
-		<input type="text" th:field="*{state}" /> <br /> 
+		<input type="text" th:field="*{state}" />
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('state')}"
+			  th:errors="*{state}"> State is required </span> <br/> 
 
 		<label for="zip">Zipcode: </label> 
-		<input type="text" th:field="*{zip}" /> <br />
+		<input type="text" th:field="*{zip}" /> 
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('zip')}"
+			  th:errors="*{zip}"> Zip code is required </span> <br/> 
 		
 		<h3>Here's how I'll pay...</h3>
 		<label for="ccNumber">Credit Card #: </label> 
-		<input type="text" th:field="*{ccNumber}" /> <br /> 
+		<input type="text" th:field="*{ccNumber}" />  
+		<span class="ValidationErrors"
+			  th:if="${#fields.hasErrors('ccNumber')}"
+			  th:errors="*{ccNumber}"> CC Num Error </span> <br/> 
 		
 		<label for="ccExpiration">Expiration: </label> 
-		<input type="text" th:field="*{ccExpiration}" /> <br /> 
+		<input type="text" th:field="*{ccExpiration}" /> 
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('ccExpiration')}"
+			  th:errors="*{ccExpiration}"> Must be formatter MM/YY </span> <br/> 
 		
 		<label for="ccCVV">CVV: </label> 
-		<input type="text" th:field="*{ccCVV}" /> <br />
+		<input type="text" th:field="*{ccCVV}" /> 
+		<span class="ValidationErrors"
+			  th:if"${#fields.hasErrors('ccCVV')}"
+			  th:errors="*{ccCVV}"> Invalid CVV </span> <br/> 
 		
 		<input type="submit" value="Submit order" />
 	</form>
