--- a/taco-cloud/src/main/resources/templates/login.html
+++ b/taco-cloud/src/main/resources/templates/login.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-		xmlns:th="http://www.thymeleaf.org">>
+		xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Insert title here</title>
 </head>
 <body>
 
 	<h1>Login</h1>
-	<img th:src="{/images/TacoCloud.png}"/>
+	<img th:src="@{/images/TacoCloud.png}"/>
 	
-	<div th:if="{error}">
+	<div th:if="${error}">
 		Unable to login. Check your username and password.
 	</div>
 
 	<p>New here? Click
-		<a th:href="@{/register}">Here</a>to register. </p>
+		<a th:href="@{/register}">Here </a>to register. </p>
 		
 	<!-- tag::thAction[] -->
 	<form method="POST" th:action="@{/login}" id="loginForm">
@@ -24,6 +24,8 @@
 		
 		<label for="password">Password:</label>
 		<input type="password" name="password" id="password"> </br>
+		
+		<input type="submit" value="Login"/>
 	</form>
 
 </body>
