--- a/taco-cloud/src/main/resources/templates/orderForm.html
+++ b/taco-cloud/src/main/resources/templates/orderForm.html
@@ -67,5 +67,9 @@
 		
 		<input type="submit" value="Submit order" />
 	</form>
+	
+	<form method="POST" th:action="@{/logout}">
+          <input type="submit" value="Logout"/>
+	</form>
 </body>
 </html>
